CSS => fix tab z-index

--- a/_scss/graficos.scss
+++ b/_scss/graficos.scss
@@ -44,6 +44,7 @@
 	margin-bottom: 0;
 	position: relative;
 	top: 1px;
+	z-index: 2;
 }
 .variosTabs .tabs > p {
 	cursor: pointer;
