--- a/css/main.css
+++ b/css/main.css
@@ -576,6 +576,7 @@ body {
   margin-bottom: 0;
   position: relative;
   top: 1px;
+  z-index: 2;
 }
 
 .variosTabs .tabs > p {
